Sredjeni neki testovi u bank service.